--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -172,6 +172,6 @@
                   <p>怎样在页面中显示下面的内容呢？</p>
                   <p>&lt;span>&lt;/span></p>
             
-            <span id="bottom"></span>   
+            <span id="bottom">&nbsp;</span>   
       </body>
   </html>
